@@ -7,13 +7,13 @@ Package: WrightMap
 
 Type: Package
 
-Version: 1.2.1
+Version: 1.2.3
 
-Date: 2016-03-18
+Date: 2020-04-24
 
 Author: David Torres Irribarra & Rebecca Freund
 
-Maintainer: dti@berkeley.edu, rlfreund@berkeley.edu
+Maintainer: david@torresirribarra.me, rlfreund@berkeley.edu
 
 Description: The wrightMap function creates Wright Maps based on person estimates and item parameters produced by an item response analysis. The CQmodel function reads output files created using ConQuest software and creates a set of data frames for easy data manipulation, bundled in a CQmodel object. The wrightMap function can take a CQmodel object as input or it can be used to create Wright Maps directly from data frames of person and item parameters.
 
